# mathlib

./: CMakeLists.txt  Dockerfile  Jenkinsfile
include/: mathlib.h
scripts/: delta_classifier.py  evaluate_gates.py  release_notes_gen.py
src/: main.cpp  mathlib.cpp
tests/: test_mathlib.cpp
